# web-server-rs

./: Cargo.toml  LICENSE  LICENSE.md  README.md  README_EN.md  USAGE.md  test_format.rs
.github/: README.md  RELEASE_GUIDE.md
.github/workflows/: build.yml  ci.yml  release.yml
http/: Cargo.toml
http/src/: httprequest.rs  httpresponse.rs
httpserver/: Cargo.toml
httpserver/src/: handler.rs  httpserver.rs  lib.rs  route.rs
scripts/: build-release.ps1  build-release.sh
src/: lib.rs  main.rs
threadpool/: Cargo.toml
threadpool/src/: lib.rs  threadpool.rs  worker.rs
