[package]
name = "web-server"
version = "0.1.0"
edition = "2021"
authors = ["Web Server Project"]
description = "A simple, efficient static file web server written in Rust"
license = "MIT"
repository = "https://github.com/fuzi1996/web-server-rs.git"
keywords = ["web-server", "static-files", "http", "rust"]
categories = ["web-programming", "network-programming"]
rust-version = "1.76"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
